# horoscoper

./: .flake8  .gitattributes  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
etc/: horoscopes.csv
etc/benchmarking/: locustfile.py
etc/config/caddy/: Caddyfile
etc/config/grafana/provisioning/dashboards/: api.json  workers.json
etc/config/prometheus/: prometheus.yml
horoscoper/: api.py  horoscope.py  llm.py  settings.py  utils.py  worker.py
horoscoper/api/: batcher.py  main.py  state.py  views.py
horoscoper/api/templates/: index.html
horoscoper/tasks/: infer.py
tests/: conftest.py  test_horoscope.py
tests/api/: test_batcher.py  test_views.py
tests/tasks/: test_infer.py
tests/test_api/: test_batcher.py  test_views.py
