[tool.isort]
profile = "black"

[tool.poetry]
name = "horoscoper"
version = "0.1.0"
description = ""
authors = ["Viacheslav Greshilov <slovaricheg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
