[tool.isort]
profile = "black"

[tool.poetry]
name = "horoscoper"
version = "0.1.0"
description = ""
authors = ["Viacheslav Greshilov <slovaricheg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rq = "^1.15.1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
fastapi = "^0.101.0"
sse-starlette = "^1.6.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
async-timeout = "^4.0.3"
prometheus-client = "^0.17.1"
starlette-exporter = "^0.16.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"
anyio = "^3.7.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
